# actors

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LOGGING.md  Makefile  README.md  playground.py  playground_peft.py  playground_peft_4bit.py  pyproject.toml  requirements.txt  server.py  test_async.py  test_offload.py  test_save_load.py  test_typed_output.py  testing.ipynb  trainer.py  zero3.yaml
.github/workflows/: ci.yml  release.yml
actors/: __init__.py  server.py
actors/actors/: __init__.py  base.py  openai.py  vllm.py
actors/environments/: __init__.py  env_base.py  parallel_environment.py  single_turn_env.py  types.py
actors/inference/: pool.py  rlhf_utils.py  worker.py
actors/losses/: __init__.py  base_loss.py  grpo_loss.py  liger_grpo_loss.py
actors/rewards/: __init__.py  base.py
actors/server/: pool.py  rlhf_utils.py  worker.py
actors/trainer/actors/: actors.py
actors/trainer/environments/: env_base.py
actors/trainer/losses/: grpo_loss.py
actors/trainer/trainers/: trainer.py
actors/trainers/: __init__.py  base_config.py  base_trainer.py  grpo_config.py  grpo_trainer.py  trainer.py
actors/utils/: deepspeed.py  get_logps.py  ipc_utils.py  logger.py  softmax.py  tracker.py  train_utils.py  vllm.py  wandb.py
docs/: logps_kernel.md  offloading.md  updating_weights.md
examples/: collaborative.py  collaborative_lora.py  information_exchange.py  multiple_env.py  parallel_thinking.py  playground.py  playground_2GPUs.py  playground_2GPUs_lora.py  playground_4GPUs.py  playground_peft.py  playground_peft_4bit.py  shared_base_models.py  single_turn.py  single_turn_4bit.py  single_turn_lora.py  test_offload.py  zero3.yaml  zero3_2.yaml  zero3_4.yaml  zero3_8.yaml
src/server/: pool.py  worker.py
src/trainer/actors/: actors.py
src/trainer/environments/: env_base.py
src/trainer/losses/: liger_grpo_loss.py
src/trainer/trainers/: trainer.py
src/utils/: logger.py  shm_utils.py  tracker.py  wandb.py
tests/: bench_logps.py  test_basic.py  test_collaborative_env.py  test_gpu.py  test_masking.py  test_shared_models.py
